# lidia

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  lidia_PFD.html  requirements.txt  setup.cfg
src/lidia/: __main__.py  aircraft.py  approach.html  config.py  index.html  info.html  lidia.py  mytypes.py  pfd.html  rpctask.html  server.py  types.py
src/lidia/sources/: approach.py  confighelp.py  confighelp.rst  demo.py  flightgear.py  mytypes.py  rpctask.py  smol.py
src/lidia/static/: controls.js  style.css
src/lidia/utils/: pack_lidia.m  pack_maker.py
utils/: net_fdm.hxx  net_fdm.json  pack_lidia.m  pack_maker.py  pack_manual.md  struct2dataclass.py
