[metadata]
name = lidia
version = 0.2.0
# Windows reads files as cp1250 by default, while *nix uses UTF-8
author = Marek S. Lukasiewicz
author_email = marek@lukasiewicz.tech
description = serve an aircraft instruments panel as a web page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/Maarrk/lidia
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src